[package]
name = "opengraph"
version = "0.2.5"
authors = ["Jagan Veeraraghavan <iam@jagan.id>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
license = "MIT"
homepage = "https://github.com/iamjagan/opengraph"
repository = "https://github.com/iamjagan/opengraph.git"
description = "Parses html and extracts Open Graph protocol markup. Fork of https://github.com/kumabook/opengraph"
keywords = ["opengraph"]
categories = []

[dependencies]
serde            = "^1"
serde_derive     = "^1"
serde_json       = "^1"
html5ever        = "^0.22"

[dependencies.reqwest]
version = "^0.9"
optional = true

[features]
default = ["reqwest"]
